fix overflow scrolling

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,8 +13,6 @@ $background-color: lighten($main-color, 40%);
 body {
   background-color: $background-color;
   color: $main-color;
-  height: 97vh;
-  width: 100vw;
   display: flex;
   flex-direction: column;
 }
